generate random walls better

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
-
+    <button id="generateButton">Generate New Room</button>
 
   </body>
 </html>
