--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <canvas id="canvas" width="600" height="600"></canvas>
     <button id="generateButton">Generate New Room</button>
     <h2 id="points"></h2>
+    <h2 id="health"></h2>
   </body>
 </html>
