add health display graphic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <canvas id="canvas" width="600" height="600"></canvas>
     <h2 id="points"></h2>
-    <h2 id="health"></h2>
+
+    <div id="health-container">
+      <div id="health"></div>
+      <div id="health-danger"></div>
+    </div>
   </body>
 </html>
