add displayHealth function and logic

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <h2 id="points"></h2>
 
     <div id="health-container">
-      <div id="health"></div>
       <div id="health-danger"></div>
+      <div id="health"></div>
     </div>
+
+    <div id="health-number"></div>
+
   </body>
 </html>
