complete beginning menu with space to start

--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
     <title></title>
   </head>
   <body>
-    <canvas id="canvas" width="600" height="600"></canvas>
-    <h2 id="points"></h2>
+    <div class="introduction">
+      <h2>arrows to move</h2>
+      <h2>WASD to shoot</h2>
+      <h2>space to start</h2>
+      <h2>r to restart</h2>
+      <h1>LIFE IS HELL</h1>
 
-    <div id="health-container">
-      <div id="health-danger"></div>
-      <div id="health"></div>
     </div>
+    <div class="game">
 
-    <div id="health-number"></div>
+      <canvas id="canvas" width="600" height="600"></canvas>
+      <h2 id="points"></h2>
+
+      <div id="health-container">
+        <div id="health-danger"></div>
+        <div id="health"></div>
+      </div>
+
+      <div id="health-number"></div>
+    </div>
 
   </body>
 </html>
