incomplete end game display

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 
       <div id="health-number"></div>
     </div>
+    <div class="gameOver">
+      <h1>GAME OVER</h1>
+      <h2 class="yourscore">your score: <span id = "score"></span></h2>
+      <h2 class="topscores">*   top scores  *</h2>
+      <ul class="scores">
+
+      </ul>
+    </div>
 
   </body>
 </html>
