--- a/index.html
+++ b/index.html
@@ -8,34 +8,37 @@
     <title></title>
   </head>
   <body>
+
+
     <div class="introduction">
       <h2>arrows to move</h2>
       <h2>WASD to shoot</h2>
       <h2>space to start</h2>
       <h2>r to restart</h2>
       <h1>LIFE IS HELL</h1>
-
     </div>
-    <div class="game">
 
-      <canvas id="canvas" width="600" height="600"></canvas>
-      <h2 id="points"></h2>
 
-      <div id="health-container">
-        <div id="health-danger"></div>
-        <div id="health"></div>
+    <div id="hardware">
+      <img src="img/general/hardware.png" alt="gamecnsole">
+      <div class="game">
+        <canvas id="canvas" width="600" height="600"></canvas>
+        <h2 id="points"></h2>
+
+        <div id="health-container">
+          <div id="health-danger"></div>
+          <div id="health"></div>
+        </div>
+
+        <div id="health-number"></div>
       </div>
-
-      <div id="health-number"></div>
     </div>
-    <div class="gameOver">
-      <h1>GAME OVER</h1>
-      <h2 class="yourscore">your score: <span id = "score"></span></h2>
-      <h2 class="topscores">*   top scores  *</h2>
-      <ul class="scores">
-
-      </ul>
-    </div>
-
+      <div class="gameOver">
+        <h1>GAME OVER</h1>
+        <h2 class="yourscore">your score: <span id = "score"></span></h2>
+        <h2 class="topscores">*   top scores  *</h2>
+        <ul class="scores">
+        </ul>
+      </div>
   </body>
 </html>
