add age, fix display bug

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="game">
         <canvas id="canvas" width="600" height="600"></canvas>
         <h2 id="points"></h2>
+        <h2 id="age"></h2>
 
         <div id="health-container">
           <div id="health-danger"></div>
