--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
@@ -10,7 +11,7 @@
   <body>
 
 
-
+    <!-- 1. GAME START: INITIALLY SHOWN -->
     <div class="introduction">
       <div id='openinglayout'>
         <h2><span class="color">Arrows</span> to Move  </h2>
@@ -19,9 +20,17 @@
         <h2><span class="color">R</span> to Restart  </h2>
       </div>
       <h1>LIFE IS HELL</h1>
+
+      <div>
+        <button class="btn btn-success">EASY</button>
+        <button class="btn btn-warning">NORMAL</button>
+        <button class="btn btn-danger">HARD</button>
+      </div>
     </div>
 
 
+
+    <!-- 2. GAME PLAY: INITIALLY HIDDEN -->
     <div id="hardware">
       <img src="img/general/hardware.png" alt="gamecnsole">
       <div class="game">
@@ -37,6 +46,8 @@
         <div id="health-number"></div>
       </div>
     </div>
+
+      <!-- 3 GAME OVER: INITIALLY HIDDEN -->
       <div class="gameOver">
         <h1>GAME OVER</h1>
         <div id="scorelayout">
