add difficulties logic

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <h2><span class="color">Space</span> to Start  </h2>
         <h2><span class="color">R</span> to Restart  </h2>
       </div>
-      <h1>LIFE IS HELL</h1>
 
-      <div>
-        <button class="btn btn-success">EASY</button>
-        <button class="btn btn-warning">NORMAL</button>
-        <button class="btn btn-danger">HARD</button>
+      <h1>LIFE IS HELL</h1>
+      <div class="difficulties">
+        <button id="easy" class="btn btn-success">EASY</button>
+        <button id="normal" class="btn btn-warning">NORMAL</button>
+        <button id="hard" class="btn btn-danger">HARD</button>
       </div>
     </div>
 
