--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+    <script src="js/howler.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <title></title>
   </head>
