styling and wall fixes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>GAME OVER</h1>
         <div id="scorelayout">
           <h2 class="yourscore">Your Score: <span id = "score"></span></h2>
-          <h2 class="topscores">*   Top Scores  *</h2>
+          <h2 id="topscores">*   Top Scores  *</h2>
           <ul class="scores"></ul>
         </div>
       </div>
